Fixed laggyness on mobile?

--- a/carousel.css
+++ b/carousel.css
@@ -35,7 +35,7 @@ body {
 }
 
 .mobile-transition {
-  transition: left 0.3s ease-in-out;
+	transition: none;
 }
 
 .gallery-item:nth-child(1) {
